@@ -1,85 +1,0 @@
-{
-  "version": 1,
-  "data": {
-    "0": "WATER",
-    "1": "PLAINS",
-    "2": "DESERT",
-    "3": "MOUNTAINS",
-    "4": "FOREST",
-    "5": "PINES",
-    "6": "SWAMP",
-    "7": "WATER",
-    "8": "CAVE_WALLS",
-    "9": "SHORE",
-    "10": "ICE",
-    "11": "ICE",
-    "12": "SNOW",
-    "13": "SNOW_HILLS",
-    "14": "MUSHROOM",
-    "15": "SHORE",
-    "16": "SHORE",
-    "17": "DESERT_HILLS",
-    "18": "FOREST_HILLS",
-    "19": "PINES_HILLS",
-    "20": "MOUNTAINS",
-    "21": "JUNGLE",
-    "22": "JUNGLE_HILLS",
-    "23": "JUNGLE_EDGE",
-    "24": "WATER",
-    "25": "ROCK_SHORE",
-    "26": "SHORE",
-    "27": "BIRCH",
-    "28": "BIRCH_HILLS",
-    "29": "DENSE_FOREST",
-    "30": "SNOW_PINES",
-    "31": "SNOW_PINES_HILLS",
-    "32": "MEGA_TAIGA",
-    "33": "MEGA_TAIGA_HILLS",
-    "34": "MOUNTAINS_ALL",
-    "35": "SAVANNA",
-    "36": "PLATEAU_SAVANNA",
-    "37": "MESA",
-    "38": "PLATEAU_MESA_TREES",
-    "39": "PLATEAU_MESA",
-    "40": "FOREST",
-    "41": "DESERT",
-    "42": "JUNGLE",
-    "43": "DESERT",
-    "44": "SWAMP",
-    "45": "PLAINS",
-    "46": "PINES",
-    "47": "DESERT",
-    "50": "FOREST_HILLS",
-    "52": "FOREST_HILLS",
-    "53": "MOUNTAINS_NAKED",
-    "54": "MOUNTAINS_NAKED",
-    "57": "HILLS",
-    "58": "PLAINS",
-    "59": "PLAINS",
-    "60": "MOUNTAINS_NAKED",
-    "61": "DESERT_HILLS",
-    "62": "DESERT_HILLS",
-    "127": "END_VOID",
-    "129": "SUNFLOWERS",
-    "130": "DESERT",
-    "131": "MOUNTAINS_SNOW_CAPS",
-    "132": "FOREST_FLOWERS",
-    "133": "PINES_HILLS",
-    "134": "SWAMP_HILLS",
-    "140": "ICE_SPIKES",
-    "149": "JUNGLE_CLIFFS",
-    "151": "JUNGLE_EDGE_HILLS",
-    "155": "TALL_BIRCH",
-    "156": "TALL_BIRCH_HILLS",
-    "157": "DENSE_FOREST_HILLS",
-    "158": "SNOW_PINES_HILLS",
-    "160": "MEGA_SPRUCE",
-    "161": "MEGA_SPRUCE_HILLS",
-    "162": "MOUNTAINS_SNOW_CAPS",
-    "163": "SAVANNA_CLIFFS",
-    "164": "PLATEAU_SAVANNA_M",
-    "165": "BRYCE",
-    "166": "PLATEAU_MESA_TREES_LOW",
-    "167": "PLATEAU_MESA_LOW"
-  }
-}
