@@ -24,6 +24,9 @@ general {
     # Prevent death on void fall (limits damage to leave at least 0.5 hearts)
     B:preventDeath=false
 
+    # For Game Stages support, set this to the game stage that needs to be unlocked in order for Forgiving Void to be enabled.
+    S:requiredGameStage=
+
     # The y level at which Forgiving Void should forgive the player and send them towards the sky.
     # Min: -64
     # Max: 0
