@@ -24,7 +24,7 @@ cavegen {
 
     # Controls size of caves at the surface. Smaller values = more caves break through the surface. Between -1.0 and 1.0
     # Default: -0.081 (45% of noiseCutoffValue)
-    D:surfaceCutoffValue=0.1
+    D:surfaceCutoffValue=0.5
 
     # Squishes caves on the Y axis. Lower values = taller caves and more steep drops
     # Default: 2.0
