@@ -1,9 +1,11 @@
 
 # Orechid Petram
+morechids.nei.orechid_petram=Orechid Petram
 morechids:orechid_petram.name=Orechid Petram
 morechids:orechid_petram.reference=Stoneward bound
 
 # Orechid Terram
+morechids.nei.orechid_terram=Orechid Terram
 morechids:orechid_terram.name=Orechid Terram
 morechids:orechid_terram.reference=Always greener
 
